@@ -1,3 +1,7 @@
+* 2013-08-20 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 28163: Implicitly remove alpha channel when transforming to JPEG
+
 * 2013-08-20 - thorben.betten@open-xchange.com
 
  - Fix for bug 28368: Ignore possibly contained <p> tag in image's binary data
